Example/4 - Deploy Istio/app/frontend-deployment.yaml
apiVersion: v1
kind: Service
metadata:
    name: frontend-svc
    labels:
        app: frontend
    namespace: app
spec:
    ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
      #type: LoadBalancer
    selector:
        app: frontend
