Example/4 - Deploy Istio/app/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
        name: app-gateway
        namespace: app
spec:
        selector:
                istio: ingressgateway
                # app: frontend
        servers:
        - port:
                number: 5000
                name: tcp
                protocol: TCP
          hosts:
          - "*"
