Example/4 - Deploy Istio/app/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
        name: app-virtualservice
        namespace: app
spec:
        hosts:
        - frontend-svc.app.svc.cluster.local
        gateways:
        - app/app-gateway
        tcp:
        - match:
          - port: 5000
          route:
          - destination:
              host: frontend-svc.app.svc.cluster.local 
              port:
                number: 5000
